Update behave.ini constant to productino environment.

--- a/integration-tests/behave.ini
+++ b/integration-tests/behave.ini
@@ -9,4 +9,4 @@ stdout_capture = no
 config_0 = true
 command_executor = 192.168.15.19:4444/wd/hub
 browser = firefox
-url = https://rvmoura96.github.io/
+url = https://rvmoura96.github.io/case-dp6/
