Update behave env vars.

--- a/integration-tests/behave.ini
+++ b/integration-tests/behave.ini
@@ -7,6 +7,7 @@ stdout_capture = no
 
 [behave.userdata]
 config_0 = true
-command_executor = 192.168.15.19:4444/wd/hub
+local_machine_ip = 192.168.15.19
+selenium_hub_port = 4444
 browser = firefox
 url = https://rvmoura96.github.io/case-dp6/
