--- a/integration-tests/requirements.txt
+++ b/integration-tests/requirements.txt
@@ -1,5 +1,5 @@
-behave = "^1.2.6"
-selenium = "^3.141.0"
-ipdb = "^0.13.9"
-selenium-wire = "^4.3.3"
-Faker = "^8.10.1"
+behave == "^1.2.6"
+selenium == "^3.141.0"
+ipdb == "^0.13.9"
+selenium-wire == "^4.3.3"
+Faker == "^8.10.1"
